defconfig: dump configs

--- a/arch/arm/configs/codina_nodebug_defconfig
+++ b/arch/arm/configs/codina_nodebug_defconfig
@@ -26,6 +26,7 @@ CONFIG_GENERIC_CALIBRATE_DELAY=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_VECTORS_BASE=0xffff0000
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
+CONFIG_GENERIC_BUG=y
 # CONFIG_ARCH_RANDOM is not set
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
@@ -115,10 +116,11 @@ CONFIG_PANIC_TIMEOUT=5
 CONFIG_EXPERT=y
 CONFIG_UID16=y
 # CONFIG_SYSCTL_SYSCALL is not set
-# CONFIG_KALLSYMS is not set
+CONFIG_KALLSYMS=y
+# CONFIG_KALLSYMS_ALL is not set
 CONFIG_HOTPLUG=y
 CONFIG_PRINTK=y
-# CONFIG_BUG is not set
+CONFIG_BUG=y
 # CONFIG_ELF_CORE is not set
 CONFIG_BASE_FULL=y
 CONFIG_FUTEX=y
@@ -138,6 +140,7 @@ CONFIG_PERF_USE_VMALLOC=y
 #
 CONFIG_PERF_EVENTS=y
 # CONFIG_PERF_COUNTERS is not set
+# CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_COMPAT_BRK=y
@@ -146,10 +149,10 @@ CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 CONFIG_PROFILING=y
 CONFIG_BOOTTIME=y
+CONFIG_TRACEPOINTS=y
 # CONFIG_OPROFILE is not set
 CONFIG_HAVE_OPROFILE=y
 # CONFIG_KPROBES is not set
-CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
@@ -161,6 +164,7 @@ CONFIG_HAVE_HW_BREAKPOINT=y
 #
 # GCOV-based kernel profiling
 #
+# CONFIG_GCOV_KERNEL is not set
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
@@ -284,7 +288,7 @@ CONFIG_MACH_SAMSUNG_UX500=y
 CONFIG_KEYLAYOUT_LAYOUT1=y
 # CONFIG_KEYLAYOUT_LAYOUT2 is not set
 # CONFIG_MACH_GAVINI is not set
-# CONFIG_BOARD_JANICE is not set
+CONFIG_BOARD_JANICE=y
 # CONFIG_BOARD_JANICE_KOR is not set
 CONFIG_BOARD_CODINA=y
 # CONFIG_MACH_SEC_KYLE is not set
@@ -300,11 +304,14 @@ CONFIG_DBX500_SCHED_CLOCK_PRCMU=y
 # CONFIG_DBX500_MTU_SCHED_CLOCK is not set
 CONFIG_UX500_DEBUG_UART=0
 CONFIG_UX500_GPIO_KEYS=y
+# CONFIG_DBX500_PRCMU_DEBUG is not set
 CONFIG_TEE_UX500=y
 CONFIG_DB8500_MLOADER=y
+# CONFIG_UX500_DEBUG_HWREG is not set
 CONFIG_UX500_DEBUG_NO_LAUTERBACH=y
 CONFIG_UX500_L2X0_PREFETCH_CTRL=y
 CONFIG_UX500_DB_DUMP=y
+CONFIG_RTC_HCTOHC=y
 # CONFIG_UX500_DEBUG_LAST_IO is not set
 CONFIG_UX500_HW_OBSERVER=y
 # CONFIG_U8500_CUSTOM_RF is not set
@@ -323,9 +330,12 @@ CONFIG_BOARD_CODINA_EURO=y
 CONFIG_DBX500_PRCMU_QOS_POWER=y
 CONFIG_DBX500_CONTEXT=y
 # CONFIG_UX500_PM_PERFORMANCE is not set
+CONFIG_UX500_CONSOLE_UART_GPIO_PIN=29
 CONFIG_UX500_SUSPEND=y
 CONFIG_UX500_SUSPEND_STANDBY=y
 CONFIG_UX500_SUSPEND_MEM=y
+CONFIG_UX500_SUSPEND_DBG=y
+CONFIG_UX500_SUSPEND_DBG_WAKE_ON_UART=y
 # CONFIG_UX500_USECASE_GOVERNOR is not set
 
 #
@@ -350,6 +360,7 @@ CONFIG_CPU_CP15_MMU=y
 CONFIG_ARM_THUMB=y
 CONFIG_ARM_THUMBEE=y
 CONFIG_SWP_EMULATE=y
+CONFIG_IDIV_EMULATE=y
 # CONFIG_CPU_ICACHE_DISABLE is not set
 # CONFIG_CPU_DCACHE_DISABLE is not set
 # CONFIG_CPU_BPREDICT_DISABLE is not set
@@ -435,7 +446,7 @@ CONFIG_COMPACTION_RETRY=y
 CONFIG_MIGRATION=y
 # CONFIG_PHYS_ADDR_T_64BIT is not set
 CONFIG_ZONE_DMA_FLAG=0
-CONFIG_BOUNCE=y
+CONFIG_BOUNCE=n
 CONFIG_VIRT_TO_BUS=y
 # CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
@@ -450,6 +461,7 @@ CONFIG_ZSMALLOC=y
 # CONFIG_ZSMALLOC_STAT is not set
 CONFIG_FORCE_MAX_ZONEORDER=12
 CONFIG_ALIGNMENT_TRAP=y
+CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
 # CONFIG_SECCOMP is not set
 # CONFIG_CC_STACKPROTECTOR is not set
@@ -463,12 +475,11 @@ CONFIG_ARM_USE_GLIBC_MEMCOPY=y
 # CONFIG_USE_OF is not set
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
-CONFIG_CMDLINE="androidboot.hardware=samsungcodina log_buf_len=64K"
+# CONFIG_ARM_APPENDED_DTB is not set
+CONFIG_CMDLINE="androidboot.hardware=samsungcodina androidboot.selinux=permissive log_buf_len=64K cachepolicy=writealloc mpcore_wdt.mpcore_margin=359 root=/dev/ram0 rw rootwait crash_reboot=yes crash_dump=no  init=init console='null' mem=96M@0 mem_mtrace=15M@96M mem_mshared=1M@111M mem_modem=16M@112M mem=128M@128M hwmem=84M@256M mem=43M@340M mem_issw=1M@383M mem_ram_console=1M@384M mem=383M@385M vmalloc=192M jig_smd=0 lpm_boot=0 checksum_pass=1 checksum_done=1 sec_debug.enable=0 sec_debug.enable_user=0 board_id=12 startup_graphics=1 sbl_copy=1                                           "
 # CONFIG_CMDLINE_FROM_BOOTLOADER is not set
-CONFIG_CMDLINE_EXTEND=y
-# CONFIG_CMDLINE_FORCE is not set
-CONFIG_CMDLINE_CUSTOM_PARAMETERS=y
-CONFIG_CMDLINE_OVERRIDE_HWMEM="hwmem=72M@256M mem=55M@328M"
+CONFIG_CMDLINE_FORCE=y
+# CONFIG_CMDLINE_OVERRIDE_HWMEM is not set
 # CONFIG_XIP_KERNEL is not set
 CONFIG_KEXEC=y
 # CONFIG_CRASH_SWRESET is not set
@@ -518,6 +529,7 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_DBX500_CPUIDLE=y
 CONFIG_DBX500_CPUIDLE_DEEPEST_STATE=4
 # CONFIG_DBX500_CPUIDLE_APDEEPIDLE is not set
+# CONFIG_DBX500_CPUIDLE_DEBUG is not set
 
 #
 # Floating point emulation
@@ -796,7 +808,7 @@ CONFIG_NF_NAT_SIP=y
 CONFIG_IP_NF_MANGLE=y
 # CONFIG_IP_NF_TARGET_CLUSTERIP is not set
 # CONFIG_IP_NF_TARGET_ECN is not set
-# CONFIG_IP_NF_TARGET_TTL is not set
+CONFIG_IP_NF_TARGET_TTL=m
 CONFIG_IP_NF_RAW=y
 # CONFIG_IP_NF_SECURITY is not set
 CONFIG_IP_NF_ARPTABLES=y
@@ -857,6 +869,7 @@ CONFIG_XPS=y
 # Network testing
 #
 # CONFIG_NET_PKTGEN is not set
+# CONFIG_NET_DROP_MONITOR is not set
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
@@ -901,6 +914,7 @@ CONFIG_CFG80211_DEFAULT_PS=y
 # CONFIG_CFG80211_REG_DEBUG is not set
 CONFIG_WEXT_PROC=y
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
+# CONFIG_CFG80211_DEBUGFS is not set
 # CONFIG_CFG80211_INTERNAL_REGDB is not set
 CONFIG_WIRELESS_EXT_SYSFS=y
 # CONFIG_LIB80211 is not set
@@ -933,6 +947,8 @@ CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
 CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_EXTRA_FIRMWARE=""
+# CONFIG_DEBUG_DRIVER is not set
+# CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
 CONFIG_SYS_SOC=y
 # CONFIG_GENERIC_CPU_DEVICES is not set
@@ -940,6 +956,22 @@ CONFIG_SYS_SOC=y
 # CONFIG_CHARGER_MAX8903 is not set
 # CONFIG_CONNECTOR is not set
 # CONFIG_MTD is not set
+CONFIG_DTC=y
+CONFIG_OF=y
+
+#
+# Device Tree and Open Firmware support
+#
+# CONFIG_PROC_DEVICETREE is not set
+CONFIG_OF_FLATTREE=y
+CONFIG_OF_EARLY_FLATTREE=y
+CONFIG_OF_ADDRESS=y
+CONFIG_OF_IRQ=y
+CONFIG_OF_DEVICE=y
+CONFIG_OF_GPIO=y
+CONFIG_OF_I2C=y
+CONFIG_OF_NET=y
+CONFIG_OF_SPI=y
 # CONFIG_PARPORT is not set
 CONFIG_BLK_DEV=y
 CONFIG_ZRAM=m
@@ -984,7 +1016,7 @@ CONFIG_AB8500_PWM=y
 # CONFIG_SENSORS_AK8975 is not set
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
-CONFIG_UID_CPUTIME=m
+CONFIG_UID_CPUTIME=y
 CONFIG_UID_STAT=y
 # CONFIG_STE_TRACE_MODEM is not set
 CONFIG_DBX500_MLOADER=y
@@ -997,7 +1029,7 @@ CONFIG_COMPDEV=y
 # CONFIG_COMPDEV_DEBUG is not set
 CONFIG_CLONEDEV=y
 # CONFIG_CLONEDEV_DEBUG is not set
-CONFIG_NFC_PN544=m
+CONFIG_NFC_PN544=y
 CONFIG_SAMSUNG_JACK=y
 # CONFIG_SAMSUNG_JACK_SW_WATERPROOF is not set
 # CONFIG_U8500_SIM_DETECT is not set
@@ -1026,7 +1058,7 @@ CONFIG_GENERIC_BLN_USE_WAKELOCK=y
 # CONFIG_SENSORS_LIS3_SPI is not set
 # CONFIG_SENSORS_LIS3_I2C is not set
 # CONFIG_USE_DPP2601 is not set
-# CONFIG_IMMERSION_TSPDRV is not set
+CONFIG_IMMERSION_TSPDRV=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
@@ -1089,7 +1121,7 @@ CONFIG_NETDEVICES=y
 # CONFIG_BONDING is not set
 # CONFIG_MACVLAN is not set
 # CONFIG_EQUALIZER is not set
-CONFIG_TUN=m
+CONFIG_TUN=y
 # CONFIG_VETH is not set
 CONFIG_MII=m
 # CONFIG_PHYLIB is not set
@@ -1200,7 +1232,7 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_KEYBOARD_XTKBD is not set
 # CONFIG_KEYBOARD_NTS_TOUCHKEY is not set
 # CONFIG_KEYBOARD_TC360_TOUCHKEY is not set
-# CONFIG_KEYBOARD_CYPRESS_TOUCH is not set
+CONFIG_KEYBOARD_CYPRESS_TOUCH=y
 # CONFIG_INPUT_MOUSE is not set
 # CONFIG_INPUT_JOYSTICK is not set
 # CONFIG_INPUT_TABLET is not set
@@ -1240,7 +1272,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 CONFIG_TOUCHSCREEN_ZINITIX_BT404=y
 # CONFIG_TOUCHSCREEN_ZINITIX is not set
-# CONFIG_TOUCHSCREEN_ATMEL_MXT224E is not set
+CONFIG_TOUCHSCREEN_ATMEL_MXT224E=y
 # CONFIG_TOUCHSCREEN_MMS136_TS is not set
 # CONFIG_TOUCHSCREEN_MMS134S_TS is not set
 # CONFIG_TOUCHSCREEN_MMS1XX_TS is not set
@@ -1380,6 +1412,7 @@ CONFIG_I2C_NOMADIK=y
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
 CONFIG_SPI=y
+# CONFIG_SPI_DEBUG is not set
 CONFIG_SPI_MASTER=y
 
 #
@@ -1420,6 +1453,7 @@ CONFIG_SPI_GPIO=y
 #
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
 CONFIG_GPIOLIB=y
+# CONFIG_DEBUG_GPIO is not set
 CONFIG_GPIO_SYSFS=y
 
 #
@@ -1584,6 +1618,7 @@ CONFIG_WATCHDOG=y
 # CONFIG_MPCORE_WATCHDOG is not set
 # CONFIG_MAX63XX_WATCHDOG is not set
 CONFIG_UX500_WATCHDOG=y
+# CONFIG_UX500_WATCHDOG_DEBUG is not set
 CONFIG_UX500_WATCHDOG_KERNEL_KICKER=y
 
 #
@@ -1647,6 +1682,7 @@ CONFIG_ABX500_CORE=y
 CONFIG_AB8500_CORE=y
 CONFIG_AB8500_I2C_CORE=y
 # CONFIG_AB8500_DENC is not set
+# CONFIG_AB8500_DEBUG is not set
 CONFIG_AB8500_GPADC=y
 # CONFIG_AB3550_CORE is not set
 CONFIG_DBX500_PRCMU=y
@@ -1705,6 +1741,7 @@ CONFIG_MEDIA_SUPPORT=y
 CONFIG_GPU_MALI=y
 CONFIG_MALI400=y
 # CONFIG_MALI400_DEBUG is not set
+# CONFIG_MALI400_PROFILING is not set
 CONFIG_MALI400_GPU_UTILIZATION=y
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
@@ -1746,7 +1783,7 @@ CONFIG_MCDE_DISPLAY_WS2401_DPI=y
 CONFIG_MCDE_DISPLAY_S6D27A1_DPI=y
 CONFIG_MCDE_LCDCLK_MANAGEMENT=y
 # CONFIG_MCDE_DISPLAY_LD9040_DPI is not set
-# CONFIG_MCDE_DISPLAY_S6E63MN0_DPI is not set
+CONFIG_MCDE_DISPLAY_S6E63MN0_DPI=y
 # CONFIG_MCDE_DISPLAY_GAVINI_DPI is not set
 # CONFIG_MCDE_DISPLAY_LMS397KF_DPI is not set
 # CONFIG_MCDE_DISPLAY_I9060_DPI is not set
@@ -2029,7 +2066,9 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_ISIGHTFW is not set
 # CONFIG_USB_YUREX is not set
 CONFIG_USB_GADGET=y
+# CONFIG_USB_GADGET_DEBUG is not set
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
+# CONFIG_USB_GADGET_DEBUG_FS is not set
 CONFIG_USB_GADGET_VBUS_DRAW=500
 CONFIG_USB_GADGET_SELECTED=y
 # CONFIG_USB_GADGET_FUSB300 is not set
@@ -2098,7 +2137,7 @@ CONFIG_MMC_ARMMMCI=y
 # CONFIG_MEMSTICK is not set
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
-# CONFIG_FLASH_LED_KTD267 is not set
+CONFIG_FLASH_LED_KTD267=y
 
 #
 # LED drivers
@@ -2107,6 +2146,7 @@ CONFIG_LEDS_CLASS=y
 # CONFIG_LEDS_PCA9532 is not set
 CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_GPIO_PLATFORM=y
+CONFIG_LEDS_GPIO_OF=y
 # CONFIG_LEDS_LP3944 is not set
 # CONFIG_LEDS_LP5521 is not set
 # CONFIG_LEDS_LP5523 is not set
@@ -2131,7 +2171,9 @@ CONFIG_LEDS_TRIGGERS=y
 #
 # iptables trigger is under Netfilter config (LED target)
 #
-# CONFIG_NFC_DEVICES is not set
+CONFIG_NFC_DEVICES=y
+CONFIG_PN544_NFC=m
+# CONFIG_PN547_NFC is not set
 CONFIG_SWITCH=y
 # CONFIG_SWITCH_GPIO is not set
 # CONFIG_ACCESSIBILITY is not set
@@ -2150,7 +2192,7 @@ CONFIG_RTC_INTF_DEV=y
 # CONFIG_RTC_INTF_DEV_UIE_EMUL is not set
 CONFIG_RTC_INTF_ALARM=y
 CONFIG_RTC_INTF_ALARM_DEV=y
-CONFIG_RTC_ALARM_DEV_NAME=""
+CONFIG_RTC_ALARM_DEV_NAME="pl031"
 # CONFIG_RTC_DRV_TEST is not set
 
 #
@@ -2210,8 +2252,8 @@ CONFIG_RTC_DRV_AB8500=y
 #
 # on-CPU RTC drivers
 #
-# CONFIG_RTC_DRV_PL030 is not set
-# CONFIG_RTC_DRV_PL031 is not set
+# CONFIG_RTC_DRV_PL030 is not set 
+CONFIG_RTC_DRV_PL031=y
 # CONFIG_MACH_SEC_GOLDEN_CHN is not set
 # CONFIG_BOARD_JANICE_CHN is not set
 # CONFIG_MACH_GAVINI_CHN is not set
@@ -2251,7 +2293,14 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_IPC_32BIT=y
 CONFIG_ANDROID_LOGGER=m
-# CONFIG_ANDROID_RAM_CONSOLE is not set
+CONFIG_ANDROID_RAM_CONSOLE=y
+CONFIG_ANDROID_RAM_CONSOLE_ENABLE_VERBOSE=y
+CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION=y
+CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_DATA_SIZE=128
+CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_ECC_SIZE=16
+CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_SYMBOL_SIZE=8
+CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_POLYNOMIAL=0x11d
+# CONFIG_ANDROID_RAM_CONSOLE_EARLY_INIT is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
@@ -2328,27 +2377,51 @@ CONFIG_PROXIMITY=y
 # CONFIG_PROXIMITY_CM3607 is not set
 # CONFIG_PROXIMITY_GP2A is not set
 # CONFIG_PROXIMITY_GP2A030 is not set
-# CONFIG_LIGHT_PROX_GP2A is not set
-# CONFIG_GP2A_MODE_B is not set
+CONFIG_LIGHT_PROX_GP2A=y
+CONFIG_GP2A_MODE_B=y
 CONFIG_PROXIMITY_TMD2672=y
 # CONFIG_PROXIMITY_PX3215 is not set
 # CONFIG_PROXIMITY_PX3315 is not set
 # CONFIG_SENSORS_STK3X1X is not set
-# CONFIG_ORIENTATION is not set
-# CONFIG_INPUT_YAS_ORIENTATION is not set
+CONFIG_ORIENTATION=y
+CONFIG_INPUT_YAS_ORIENTATION=y
 
 #
 # Motion Sensors Support
 #
-CONFIG_MPU_NONE=y
-# CONFIG_MPU_SENSORS_MPU3050 is not set
+# CONFIG_MPU_NONE is not set
+CONFIG_MPU_SENSORS_MPU3050=y
 # CONFIG_MPU_SENSORS_MPU6000 is not set
 # CONFIG_SENSORS_MMC328X is not set
 # CONFIG_ECOMPASS is not set
-# CONFIG_MPU_SENSORS_TIMERIRQ is not set
+# CONFIG_MPU_SENSORS_ACCELEROMETER_NONE is not set
+# CONFIG_MPU_SENSORS_ADXL346 is not set
+# CONFIG_MPU_SENSORS_BMA150 is not set
+CONFIG_MPU_SENSORS_BMA222=y
+# CONFIG_MPU_SENSORS_KXSD9 is not set
+# CONFIG_MPU_SENSORS_KXTF9 is not set
+# CONFIG_MPU_SENSORS_LIS331DLH is not set
+# CONFIG_MPU_SENSORS_LIS3DH is not set
+# CONFIG_MPU_SENSORS_LSM303DLHA is not set
+# CONFIG_MPU_SENSORS_MMA8450 is not set
+# CONFIG_MPU_SENSORS_MMA845X is not set
+CONFIG_MPU_SENSORS_COMPASS_NONE=y
+# CONFIG_MPU_SENSORS_AK8975 is not set
+# CONFIG_MPU_SENSORS_MMC314X is not set
+# CONFIG_MPU_SENSORS_AMI30X is not set
+# CONFIG_MPU_SENSORS_HMC5883 is not set
+# CONFIG_MPU_SENSORS_LSM303DLHM is not set
+# CONFIG_MPU_SENSORS_YAS529 is not set
+# CONFIG_MPU_SENSORS_HSCDTD002B is not set
+# CONFIG_MPU_SENSORS_HSCDTD004A is not set
+CONFIG_MPU_SENSORS_PRESSURE_NONE=y
+# CONFIG_MPU_SENSORS_BMA085 is not set
+CONFIG_MPU_SENSORS_TIMERIRQ=y
+# CONFIG_MPU_SENSORS_DEBUG is not set
 CONFIG_SENSORS_CORE=y
 CONFIG_COMPASS=y
-# CONFIG_INPUT_YAS_MAGNETOMETER is not set
+CONFIG_INPUT_YAS_MAGNETOMETER=y
+CONFIG_INPUT_YAS_MAGNETOMETER_POSITION=3
 CONFIG_SAMSUNG_PHONE_SVNET=y
 # CONFIG_PHONE_MODEMCTL is not set
 # CONFIG_PHONE_ONEDRAM is not set
@@ -2369,6 +2442,7 @@ CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_JBD2=y
+# CONFIG_JBD2_DEBUG is not set
 CONFIG_FS_MBCACHE=y
 # CONFIG_REISERFS_FS is not set
 # CONFIG_JFS_FS is not set
@@ -2377,6 +2451,7 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
 CONFIG_F2FS_FS=m
+CONFIG_F2FS_STAT_FS=y
 CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
@@ -2516,7 +2591,7 @@ CONFIG_ASYNC_FSYNC=y
 # Kernel hacking
 #
 CONFIG_PRINTK_TIME=y
-# CONFIG_DEBUG_PRINTK is not set
+CONFIG_DEBUG_PRINTK=y
 CONFIG_DEFAULT_MESSAGE_LOGLEVEL=4
 # CONFIG_ENABLE_WARN_DEPRECATED is not set
 CONFIG_ENABLE_MUST_CHECK=y
@@ -2524,35 +2599,102 @@ CONFIG_FRAME_WARN=1024
 # CONFIG_MAGIC_SYSRQ is not set
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_UNUSED_SYMBOLS is not set
-# CONFIG_DEBUG_FS is not set
+CONFIG_DEBUG_FS=y
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
-# CONFIG_DEBUG_KERNEL is not set
+CONFIG_DEBUG_KERNEL=y
+# CONFIG_DEBUG_SHIRQ is not set
+# CONFIG_LOCKUP_DETECTOR is not set
 # CONFIG_HARDLOCKUP_DETECTOR is not set
+# CONFIG_DETECT_HUNG_TASK is not set
+# CONFIG_SCHED_DEBUG is not set
+# CONFIG_SCHEDSTATS is not set
+# CONFIG_TIMER_STATS is not set
+# CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_SLUB_STATS is not set
+# CONFIG_DEBUG_KMEMLEAK is not set
+# CONFIG_DEBUG_PREEMPT is not set
+# CONFIG_DEBUG_RT_MUTEXES is not set
+# CONFIG_RT_MUTEX_TESTER is not set
+# CONFIG_DEBUG_SPINLOCK is not set
+# CONFIG_DEBUG_MUTEXES is not set
+# CONFIG_DEBUG_LOCK_ALLOC is not set
+# CONFIG_PROVE_LOCKING is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
-CONFIG_STACKTRACE=y
+# CONFIG_LOCK_STAT is not set
+# CONFIG_DEBUG_SPINLOCK_SLEEP is not set
+# CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
+CONFIG_STACKTRACE=n
+# CONFIG_DEBUG_STACK_USAGE is not set
+# CONFIG_DEBUG_KOBJECT is not set
+# CONFIG_DEBUG_HIGHMEM is not set
+CONFIG_DEBUG_BUGVERBOSE=n
+# CONFIG_DEBUG_INFO is not set
+# CONFIG_DEBUG_VM is not set
+# CONFIG_DEBUG_WRITECOUNT is not set
 # CONFIG_DEBUG_MEMORY_INIT is not set
-CONFIG_FRAME_POINTER=y
+# CONFIG_DEBUG_LIST is not set
+# CONFIG_TEST_LIST_SORT is not set
+# CONFIG_DEBUG_SG is not set
+# CONFIG_DEBUG_NOTIFIERS is not set
+# CONFIG_DEBUG_CREDENTIALS is not set
+CONFIG_FRAME_POINTER=n
+# CONFIG_BOOT_PRINTK_DELAY is not set
+# CONFIG_RCU_TORTURE_TEST is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
 CONFIG_RCU_CPU_STALL_VERBOSE=y
+# CONFIG_RCU_CPU_STALL_INFO is not set
+# CONFIG_BACKTRACE_SELF_TEST is not set
+# CONFIG_DEBUG_BLOCK_EXT_DEVT is not set
+# CONFIG_DEBUG_FORCE_WEAK_PER_CPU is not set
+# CONFIG_DEBUG_PER_CPU_MAPS is not set
+# CONFIG_LKDTM is not set
+# CONFIG_CPU_NOTIFIER_ERROR_INJECT is not set
+# CONFIG_FAULT_INJECTION is not set
 CONFIG_SYSCTL_SYSCALL_CHECK=y
+# CONFIG_DEBUG_PAGEALLOC is not set
+CONFIG_NOP_TRACER=y
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
 CONFIG_HAVE_C_RECORDMCOUNT=y
+CONFIG_RING_BUFFER=y
+CONFIG_EVENT_TRACING=y
+CONFIG_EVENT_POWER_TRACING_DEPRECATED=y
+CONFIG_CONTEXT_SWITCH_TRACER=y
+CONFIG_TRACING=y
+CONFIG_GENERIC_TRACER=y
 CONFIG_TRACING_SUPPORT=y
 # CONFIG_FTRACE is not set
+# CONFIG_FUNCTION_TRACER is not set
+# CONFIG_FUNCTION_GRAPH_TRACER is not set
+# CONFIG_IRQSOFF_TRACER is not set
+# CONFIG_PREEMPT_TRACER is not set
+# CONFIG_SCHED_TRACER is not set
+CONFIG_BRANCH_PROFILE_NONE=y
+# CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
+# CONFIG_PROFILE_ALL_BRANCHES is not set
+# CONFIG_STACK_TRACER is not set
+# CONFIG_BLK_DEV_IO_TRACE is not set
+# CONFIG_DYNAMIC_FTRACE is not set
+# CONFIG_FUNCTION_PROFILER is not set
+# CONFIG_FTRACE_MCOUNT_RECORD is not set
+# CONFIG_FTRACE_STARTUP_TEST is not set
+# CONFIG_RING_BUFFER_BENCHMARK is not set
+# CONFIG_DYNAMIC_DEBUG is not set
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_PANIC_ON_DATA_CORRUPTION is not set
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
+# CONFIG_KGDB is not set
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_ARM_UNWIND is not set
+CONFIG_OLD_MCOUNT=y
 # CONFIG_DEBUG_USER is not set
+# CONFIG_DEBUG_LL is not set
 # CONFIG_OC_ETM is not set
 
 #
@@ -2681,7 +2823,7 @@ CONFIG_CRYPTO_LZ4HC=y
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 CONFIG_CRYPTO_HW=y
 # CONFIG_CRYPTO_DEV_UX500 is not set
-# CONFIG_BINARY_PRINTF is not set
+CONFIG_BINARY_PRINTF=y
 
 #
 # Library routines
@@ -2712,6 +2854,9 @@ CONFIG_LZ4HC_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
+CONFIG_REED_SOLOMON=y
+CONFIG_REED_SOLOMON_ENC8=y
+CONFIG_REED_SOLOMON_DEC8=y
 CONFIG_TEXTSEARCH=y
 CONFIG_TEXTSEARCH_KMP=y
 CONFIG_TEXTSEARCH_BM=y
