--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -288,7 +288,7 @@ CONFIG_MACH_SAMSUNG_UX500=y
 CONFIG_KEYLAYOUT_LAYOUT1=y
 # CONFIG_KEYLAYOUT_LAYOUT2 is not set
 # CONFIG_MACH_GAVINI is not set
-CONFIG_BOARD_JANICE=y
+# CONFIG_BOARD_JANICE
 # CONFIG_BOARD_JANICE_KOR is not set
 CONFIG_BOARD_CODINA=y
 # CONFIG_MACH_SEC_KYLE is not set
@@ -461,6 +461,7 @@ CONFIG_ZSMALLOC=y
 # CONFIG_ZSMALLOC_STAT is not set
 CONFIG_FORCE_MAX_ZONEORDER=12
 CONFIG_ALIGNMENT_TRAP=y
+CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
 # CONFIG_SECCOMP is not set
 # CONFIG_CC_STACKPROTECTOR is not set
@@ -1039,7 +1040,7 @@ CONFIG_GENERIC_BLN_USE_WAKELOCK=y
 # CONFIG_SENSORS_LIS3_SPI is not set
 # CONFIG_SENSORS_LIS3_I2C is not set
 # CONFIG_USE_DPP2601 is not set
-CONFIG_IMMERSION_TSPDRV=y
+# CONFIG_IMMERSION_TSPDRV is not set
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
@@ -1213,7 +1214,7 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_KEYBOARD_XTKBD is not set
 # CONFIG_KEYBOARD_NTS_TOUCHKEY is not set
 # CONFIG_KEYBOARD_TC360_TOUCHKEY is not set
-CONFIG_KEYBOARD_CYPRESS_TOUCH=y
+# CONFIG_KEYBOARD_CYPRESS_TOUCH is not set
 # CONFIG_INPUT_MOUSE is not set
 # CONFIG_INPUT_JOYSTICK is not set
 # CONFIG_INPUT_TABLET is not set
@@ -1253,7 +1254,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 CONFIG_TOUCHSCREEN_ZINITIX_BT404=y
 # CONFIG_TOUCHSCREEN_ZINITIX is not set
-CONFIG_TOUCHSCREEN_ATMEL_MXT224E=y
+# CONFIG_TOUCHSCREEN_ATMEL_MXT224E is not set
 # CONFIG_TOUCHSCREEN_MMS136_TS is not set
 # CONFIG_TOUCHSCREEN_MMS134S_TS is not set
 # CONFIG_TOUCHSCREEN_MMS1XX_TS is not set
@@ -1749,6 +1750,7 @@ CONFIG_FB_SYS_FOPS=y
 # Frame buffer hardware drivers
 #
 CONFIG_MCDE=y
+CONFIG_MCDE_LCDCLK_MANAGEMENT=y
 CONFIG_FB_MCDE=y
 # CONFIG_FB_MCDE_DEBUG is not set
 # CONFIG_MCDE_FB_AVOID_REALLOC is not set
@@ -1762,7 +1764,7 @@ CONFIG_MCDE_DISPLAY_DPI=y
 CONFIG_MCDE_DISPLAY_WS2401_DPI=y
 CONFIG_MCDE_DISPLAY_S6D27A1_DPI=y
 # CONFIG_MCDE_DISPLAY_LD9040_DPI is not set
-CONFIG_MCDE_DISPLAY_S6E63MN0_DPI=y
+# CONFIG_MCDE_DISPLAY_S6E63MN0_DPI is not set
 # CONFIG_MCDE_DISPLAY_GAVINI_DPI is not set
 # CONFIG_MCDE_DISPLAY_LMS397KF_DPI is not set
 # CONFIG_MCDE_DISPLAY_I9060_DPI is not set
@@ -2116,7 +2118,7 @@ CONFIG_MMC_ARMMMCI=y
 # CONFIG_MEMSTICK is not set
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
-CONFIG_FLASH_LED_KTD267=y
+# CONFIG_FLASH_LED_KTD267 is not set
 
 #
 # LED drivers
@@ -2149,9 +2151,7 @@ CONFIG_LEDS_TRIGGERS=y
 #
 # iptables trigger is under Netfilter config (LED target)
 #
-CONFIG_NFC_DEVICES=y
-CONFIG_PN544_NFC=m
-# CONFIG_PN547_NFC is not set
+# CONFIG_NFC_DEVICES is not set
 CONFIG_SWITCH=y
 # CONFIG_SWITCH_GPIO is not set
 # CONFIG_ACCESSIBILITY is not set
@@ -2233,7 +2233,7 @@ CONFIG_RTC_DRV_AB8500=y
 # CONFIG_RTC_DRV_PL030 is not set
 CONFIG_RTC_DRV_PL031=y
 # CONFIG_MACH_SEC_GOLDEN_CHN is not set
-# CONFIG_BOARD_JANICE_CHN is not set
+# CONFIG_MACH_JANICE_CHN is not set
 # CONFIG_MACH_GAVINI_CHN is not set
 CONFIG_DMADEVICES=y
 # CONFIG_DMADEVICES_DEBUG is not set
@@ -2355,51 +2355,27 @@ CONFIG_PROXIMITY=y
 # CONFIG_PROXIMITY_CM3607 is not set
 # CONFIG_PROXIMITY_GP2A is not set
 # CONFIG_PROXIMITY_GP2A030 is not set
-CONFIG_LIGHT_PROX_GP2A=y
-CONFIG_GP2A_MODE_B=y
+# CONFIG_LIGHT_PROX_GP2A is not set
+# CONFIG_GP2A_MODE_B is not set
 CONFIG_PROXIMITY_TMD2672=y
 # CONFIG_PROXIMITY_PX3215 is not set
 # CONFIG_PROXIMITY_PX3315 is not set
 # CONFIG_SENSORS_STK3X1X is not set
-CONFIG_ORIENTATION=y
-CONFIG_INPUT_YAS_ORIENTATION=y
+# CONFIG_ORIENTATION is not set
+# CONFIG_INPUT_YAS_ORIENTATION is not set
 
 #
 # Motion Sensors Support
 #
-# CONFIG_MPU_NONE is not set
-CONFIG_MPU_SENSORS_MPU3050=y
+CONFIG_MPU_NONE=y
+# CONFIG_MPU_SENSORS_MPU3050 is not set
 # CONFIG_MPU_SENSORS_MPU6000 is not set
 # CONFIG_SENSORS_MMC328X is not set
 # CONFIG_ECOMPASS is not set
-# CONFIG_MPU_SENSORS_ACCELEROMETER_NONE is not set
-# CONFIG_MPU_SENSORS_ADXL346 is not set
-# CONFIG_MPU_SENSORS_BMA150 is not set
-CONFIG_MPU_SENSORS_BMA222=y
-# CONFIG_MPU_SENSORS_KXSD9 is not set
-# CONFIG_MPU_SENSORS_KXTF9 is not set
-# CONFIG_MPU_SENSORS_LIS331DLH is not set
-# CONFIG_MPU_SENSORS_LIS3DH is not set
-# CONFIG_MPU_SENSORS_LSM303DLHA is not set
-# CONFIG_MPU_SENSORS_MMA8450 is not set
-# CONFIG_MPU_SENSORS_MMA845X is not set
-CONFIG_MPU_SENSORS_COMPASS_NONE=y
-# CONFIG_MPU_SENSORS_AK8975 is not set
-# CONFIG_MPU_SENSORS_MMC314X is not set
-# CONFIG_MPU_SENSORS_AMI30X is not set
-# CONFIG_MPU_SENSORS_HMC5883 is not set
-# CONFIG_MPU_SENSORS_LSM303DLHM is not set
-# CONFIG_MPU_SENSORS_YAS529 is not set
-# CONFIG_MPU_SENSORS_HSCDTD002B is not set
-# CONFIG_MPU_SENSORS_HSCDTD004A is not set
-CONFIG_MPU_SENSORS_PRESSURE_NONE=y
-# CONFIG_MPU_SENSORS_BMA085 is not set
-CONFIG_MPU_SENSORS_TIMERIRQ=y
-# CONFIG_MPU_SENSORS_DEBUG is not set
+# CONFIG_MPU_SENSORS_TIMERIRQ is not set
 CONFIG_SENSORS_CORE=y
 CONFIG_COMPASS=y
-CONFIG_INPUT_YAS_MAGNETOMETER=y
-CONFIG_INPUT_YAS_MAGNETOMETER_POSITION=3
+# CONFIG_INPUT_YAS_MAGNETOMETER is not set
 CONFIG_SAMSUNG_PHONE_SVNET=y
 # CONFIG_PHONE_MODEMCTL is not set
 # CONFIG_PHONE_ONEDRAM is not set
