ipv6: compile with -Os
even though that the memory saving after doing this minimal, there should not be any cost for that.

--- a/net/ipv6/Makefile
+++ b/net/ipv6/Makefile
@@ -46,5 +46,5 @@ CFLAGS_THUMB2   :=-mthumb $(AFLAGS_AUTOIT) $(AFLAGS_NOWARN)
 AFLAGS_THUMB2   :=$(CFLAGS_THUMB2) -Wa$(comma)-mthumb
 
 KBUILD_AFLAGS += $(AFLAGS_THUMB2)
-KBUILD_CFLAGS += $(CFLAGS_THUMB2)
+KBUILD_CFLAGS += $(CFLAGS_THUMB2) -Os
 
