--- a/arch/arm/configs/codina_nodebug_defconfig
+++ b/arch/arm/configs/codina_nodebug_defconfig
@@ -2458,7 +2458,7 @@ CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_TMPFS_XATTR=y
 # CONFIG_HUGETLB_PAGE is not set
-# CONFIG_CONFIGFS_FS is not set
+CONFIG_CONFIGFS_FS=y
 CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
@@ -2792,3 +2792,4 @@ CONFIG_CPU_RMAP=y
 CONFIG_NLATTR=y
 CONFIG_AVERAGE=y
 CONFIG_GOD_MODE=y
+CONFIG_SENSORS=y
