--- a/arch/arm/Makefile
+++ b/arch/arm/Makefile
@@ -257,3 +257,6 @@ define archhelp
   echo  '                  (distribution) /sbin/$(INSTALLKERNEL) or'
   echo  '                  install to $$(INSTALL_PATH) and run lilo'
 endef
+
+#Q=
+#quiet=
