arm/crypto: fix implicit IT issue with GCC 6.1+

--- a/arch/arm/crypto/Makefile
+++ b/arch/arm/crypto/Makefile
@@ -21,3 +21,5 @@ $(src)/aesbs-core.S_shipped: $(src)/bsaes-armv7.pl
 	$(call cmd,perl)
 
 .PRECIOUS: $(obj)/aesbs-core.S
+
+AFLAGS_KERNEL += -Wa,-mimplicit-it=always
