Revert "Cross-device kernel: initial janice support"
This reverts commit 903272257dd3c187958c077f9ed7b3ebefeca3ac.

--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -1754,6 +1754,7 @@ CONFIG_FB_SYS_FOPS=y
 # Frame buffer hardware drivers
 #
 CONFIG_MCDE=y
+CONFIG_MCDE_LCDCLK_MANAGEMENT=y
 CONFIG_FB_MCDE=y
 # CONFIG_FB_MCDE_DEBUG is not set
 # CONFIG_MCDE_FB_AVOID_REALLOC is not set
@@ -2236,7 +2237,7 @@ CONFIG_RTC_DRV_AB8500=y
 # CONFIG_RTC_DRV_PL030 is not set
 CONFIG_RTC_DRV_PL031=y
 # CONFIG_MACH_SEC_GOLDEN_CHN is not set
-# CONFIG_BOARD_JANICE_CHN is not set
+# CONFIG_MACH_JANICE_CHN is not set
 # CONFIG_MACH_GAVINI_CHN is not set
 CONFIG_DMADEVICES=y
 # CONFIG_DMADEVICES_DEBUG is not set
