--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -112,11 +112,11 @@ CONFIG_INITRAMFS_ROOT_GID=0
 # CONFIG_RD_LZ4 is not set
 CONFIG_INITRAMFS_COMPRESSION_NONE=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
-CONFIG_LTO_MENU=y
+CONFIG_LTO_MENU=n
 # CONFIG_LTO_DISABLE is not set
-CONFIG_LTO=y
+CONFIG_LTO=n
 # CONFIG_LTO_DEBUG is not set
-CONFIG_LTO_CP_CLONE=y
+CONFIG_LTO_CP_CLONE=n
 CONFIG_LTO_SLIM=n
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
