--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -56,7 +56,7 @@ CONFIG_BSD_PROCESS_ACCT=y
 # CONFIG_BSD_PROCESS_ACCT_V3 is not set
 # CONFIG_FHANDLE is not set
 # CONFIG_TASKSTATS is not set
-CONFIG_AUDIT=y
+CONFIG_AUDIT=n
 CONFIG_HAVE_GENERIC_HARDIRQS=y
 
 #
@@ -2639,7 +2639,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 #
 # Security options
 #
-CONFIG_KEYS=y
+CONFIG_KEYS=n
 # CONFIG_ENCRYPTED_KEYS is not set
 # CONFIG_KEYS_DEBUG_PROC_KEYS is not set
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
