--- a/security/selinux/Kconfig
+++ b/security/selinux/Kconfig
@@ -3,8 +3,7 @@
 #endif
 config SECURITY_SELINUX
 	bool "NSA SELinux Support"
-	depends on SECURITY_NETWORK && AUDIT && NET && INET
-	select NETWORK_SECMARK
+	depends on NET && INET
 	default n
 	help
 	  This selects NSA Security-Enhanced Linux (SELinux).
