--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -225,14 +225,16 @@ config ARM_PATCH_PHYS_VIRT_16BIT
 	  this feature (eg, building a kernel for a single machine) and
 	  you need to shrink the kernel to the minimal size.
 
-config NO_MACH_MEMORY_H
+config NEED_MACH_MEMORY_H
 	bool
 	help
-	  Select this when mach/memory.h is removed.
+	  Select this when mach/memory.h is required to provide special
+	  definitions for this platform.  The need for mach/memory.h should
+	  be avoided when possible.
 
 config PHYS_OFFSET
 	hex "Physical address of main memory"
-	depends on !ARM_PATCH_PHYS_VIRT && NO_MACH_MEMORY_H
+	depends on !ARM_PATCH_PHYS_VIRT && !NEED_MACH_MEMORY_H
 	help
 	  Please provide the physical address corresponding to the
 	  location of main memory in your system.
