--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -308,6 +308,7 @@ config ARCH_U8500
 	select ARCH_HAS_CPUFREQ
 	select NOMADIK_GPIO
 	select ARCH_HAS_PASR
+	select NEED_MACH_MEMORY_H
 	help
 	  Support for ST-Ericsson's Ux500 architecture
 
