--- a/lib/Makefile
+++ b/lib/Makefile
@@ -128,6 +128,9 @@ obj-$(CONFIG_CPU_RMAP) += cpu_rmap.o
 
 obj-$(CONFIG_LLIST) += llist.o
 
+obj-$(CONFIG_GENERIC_STRNCPY_FROM_USER) += strncpy_from_user.o
+obj-$(CONFIG_GENERIC_STRNLEN_USER) += strnlen_user.o
+
 obj-$(CONFIG_BENCH) += bench.o
 
 hostprogs-y	:= gen_crc32table
